--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsc -p tsconfig.build.json",
     "test": "mocha lib/spec/change.spec.ts",
     "prepack": "npm run build",
-    "prerelease": "npm version $npm_config_next_ver && npm pack",
+    "prerelease": "npm version $npm_config_next_ver && git push --follow-tags && npm pack",
     "release": "gh release create v$(npm run env | sed -En 's/^npm_package_version=(.+$)/\\1/p') *.tgz",
     "rel:patch": "npm run release --next-ver=patch",
     "postrelease": "rimraf *.tgz"
